Fix button color on iOS

--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -5,6 +5,7 @@
   font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 500;
+  color: #333;
 }
 
 .button--arrow {
